<resources>
    <string name="description">description</string>
    <!-- Splash -->
    <string name="app_name">FoodUp</string>
    <string name="splash_screen">Splash Screen</string>
    <!-- SignIn -->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">Welcome back, Sign In to continue</string>
    <string name="icon_outline_email">icon_outline_email</string>
    <string name="icon_outline_password">icon_outline_password</string>
    <string name="icon_outline_login">icon_outline_login</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="create_account_description">Don\'t have an account yet? Create one here</string>
    <string name="forgot_password">Forgot password?</string>
    <!-- SignUp -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Fill the form to create your account</string>
    <string name="icon_outline_privacy_tip">icon_outline_privacy_tip</string>
    <string name="icon_outline_info">icon_outline_info</string>
    <string name="icon_outline_man">icon_outline_man</string>
    <string name="icon_outline_woman">icon_outline_woman</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="password_confirmation_hint">Enter your password confirmation</string>
    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>

    <!-- Reset Verification Code -->
    <string name="enter_verification_code">Enter verification code</string>
    <string name="validate">Validate</string>
    <string name="update">Update</string>
    <string name="new_password_hint">Enter your new password</string>

    <!-- Bottom Navigation Panel -->
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>

    <!-- Home page -->
    <string name="categories">Categories</string>

    <!-- Products page -->
    <string name="deals">Deals</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>

    <!-- Settings page -->
    <string name="logout">Logout</string>

    <!-- Order page -->
    <string name="place_order">Place Order</string>
    <string name="my_orders">My Orders</string>
    <string name="one">1</string>

    <!-- Dashboard page -->
    <string name="dashboard">Dashboard</string>
</resources>