<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/description"
            android:src="@drawable/reset_password_bg" />

        <TextView
            android:id="@+id/textViewSignInLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/icon_outline_email"
                android:src="@drawable/outline_email_24_red" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/primary_orange"
            android:drawableEnd="@drawable/outline_lock_reset_24"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_background"
            android:elevation="2dp"
            app:itemIconSize="20dp"
            app:itemIconTint="@drawable/item_selector_unauthenticated"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_menu_unauthenticated" />
    </LinearLayout>
</LinearLayout>