<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/login_bg"
        android:contentDescription="@string/sign_in_description" />

    <TextView
        android:id="@+id/textViewSignInLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_in_description"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_email_24_red"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/icon_outline_email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_password_24_red"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/password_hint" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imageButtonShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/outline_visibility_24" />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_in"
        android:textSize="14sp"
        android:drawableEnd="@drawable/outline_login_24_white"
        android:backgroundTint="@color/primary_orange"
        android:textColor="@color/white" />

</LinearLayout>