<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".VerifyAccount">

    <LinearLayout
        android:id="@+id/containerOtpCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/description"
            android:src="@drawable/enter_otp_bg" />

        <TextView
            android:id="@+id/textViewValidateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/enter_verification_code"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/verifyEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_margin="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextCode1"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/outline_crop_square_24"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCode2"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/outline_crop_square_24"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCode3"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/outline_crop_square_24"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCode4"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/outline_crop_square_24"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCode5"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/outline_crop_square_24"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/buttonValidate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/primary_orange"
            android:drawableEnd="@drawable/outline_safety_check_24"
            android:text="@string/validate"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>